--- a/themes/store/default/footer.html
+++ b/themes/store/default/footer.html
@@ -3,10 +3,9 @@
         <a href="index.php">{$lang.index}</a> | <a href="/index.php?act=groupbuy&keyword=&app=search&Submit=%CB%D1%CB%F7">团购</a> | <a href="/index.php?act=youhui&keyword=&app=search&Submit=%CB%D1%CB%F7">优惠券</a> | <a href="/index.php?app=seller_groupbuy&act=gonghuo">我要供货</a> | <a href="/index.php?act=gonghuo&keyword=&app=search&Submit=%CB%D1%CB%F7">我要采购</a>| <a href="/index.php?app=article&cate_id=31"><font color="#990033"; style="font-weight:bold">广告招商</font></a>| <a href="/index.php?app=article&cate_id=13">关于我们</a>     
     </p> 
     <!--{if $memory_info}--><!--{/if}-->
-   Copyright 2012-2020 璞胜创投 Inc.,All rights reserved.博珏科技提供技术支持 <br />
-	
-	
-	{$thiscity.icp_num}
+
+
+    Copyright 2012-2020 {$thiscity.banquan} Inc.,All rights reserved.{$thiscity.icp_num}
 	
     <p style="display:none">{$thiscity.lltj}</p>
 	
