--- a/themes/mall/default/my_navigation.form.html
+++ b/themes/mall/default/my_navigation.form.html
@@ -94,7 +94,7 @@ $(function(){
 				</div>
             </li>
         </ul>
-        <div class="editor" style="padding:0px">
+        <div class="editor" style="padding:0px; display: none">
             <div style="position: relative; top: 10px; z-index: 5;">
                 <a class="btn3" id="open_editor_uploader"></a>
                    <div class="upload_con" id="editor_uploader" style="display:none">
