--- a/themes/mall/default/ts_xiangqing.html
+++ b/themes/mall/default/ts_xiangqing.html
@@ -90,8 +90,8 @@
                 <th class="paddingT15">
                   买家备注</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
-				<textarea id="beizhu" readonly="readonly" cols="30" rows="8">
-				{$com.beizhu}
+				<textarea id="beizhu" readonly="readonly" cols="60" rows="8">
+				{$com.beizhu|trim}
 				</textarea>
                 </td>
             </tr>
@@ -101,8 +101,8 @@
                 <th class="paddingT15">
                   平台处理意见</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
-				<textarea id="yijian" readonly="readonly" cols="30" rows="8" name="yijian">
-				{$com.yijian}
+				<textarea id="yijian" readonly="readonly" cols="60" rows="8" name="yijian">
+				{$com.yijian|trim}
 				</textarea>
                 </td>
             </tr>
