--- a/themes/mall/default/ts_xiangqing.html
+++ b/themes/mall/default/ts_xiangqing.html
@@ -63,8 +63,8 @@
                 <th class="paddingT15">
                   Í¶ËßÄÚÈİ</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
-				<textarea id="beizhu" readonly="readonly" cols="30" rows="8">
-				{$com.content}
+				<textarea id="beizhu" readonly="readonly" cols="60" rows="8">
+				{$com.content|trim}
 				</textarea>
                 </td>
             </tr>
