--- a/themes/mall/default/ts_xiangqing.html
+++ b/themes/mall/default/ts_xiangqing.html
@@ -49,7 +49,7 @@
                   投诉商品</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
                 <table>
-				<tr><th></th><th align="center">商品信息</th><th align="left">数量</th><th align="left">价格</th>
+				<tr><th></th><th align="left">商品信息</th><th align="left">数量</th><th align="left">价格</th>
 				</tr>
 				<!--{foreach from=$or item=val}-->
 				<tr>
@@ -63,9 +63,7 @@
                 <th class="paddingT15">
                   投诉内容</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
-				<textarea id="beizhu" readonly="readonly" cols="60" rows="8">
-				{$com.content|trim}
-				</textarea>
+				<textarea id="beizhu" readonly="readonly" cols="60" rows="8">{$com.content}</textarea>
                 </td>
             </tr>
 			<tr>
@@ -90,9 +88,7 @@
                 <th class="paddingT15">
                   买家备注</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
-				<textarea id="beizhu" readonly="readonly" cols="60" rows="8">
-				{$com.beizhu|trim}
-				</textarea>
+				<textarea id="beizhu" readonly="readonly" cols="60" rows="8">	{$com.beizhu|trim}</textarea>
                 </td>
             </tr>
 			
@@ -101,9 +97,7 @@
                 <th class="paddingT15">
                   平台处理意见</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
-				<textarea id="yijian" readonly="readonly" cols="60" rows="8" name="yijian">
-				{$com.yijian|trim}
-				</textarea>
+				<textarea id="yijian" readonly="readonly" cols="60" rows="8" name="yijian">{$com.yijian|trim}</textarea>
                 </td>
             </tr>
          {/if}
