--- a/themes/mall/default/ts_xiangqing.html
+++ b/themes/mall/default/ts_xiangqing.html
@@ -49,7 +49,7 @@
                   投诉商品</th> 
                 <td class="paddingT15 wordSpacing5" align="left">
                 <table>
-				<tr><th></th><th align="left">商品信息</th><th align="left">数量</th><th align="left">价格</th>
+				<tr><th align="center" colspan="2">商品信息</th><th align="left">数量</th><th align="left">价格</th>
 				</tr>
 				<!--{foreach from=$or item=val}-->
 				<tr>
