--- a/themes/mall/default/member.register.html
+++ b/themes/mall/default/member.register.html
@@ -153,7 +153,7 @@ $(function(){
                                 <td class="padding3 fontColor4"><label class="field_notice">{$lang.email_desc}</label><label id="checking_email" class="checking">{$lang.checking}</label></td>
                             </tr>
 							</tr>
-                            <tr>
+                            <tr style="display: none;">
                                 <td>{$lang.owner_card}:</td>
                                 <td><input type="text" name="owner_card" class="text width10" />
 								</td>
@@ -182,7 +182,7 @@ $(function(){
                             <!--{/if}-->
                             <tr>
                                 <td></td>
-                                <td><input id="clause" type="checkbox" name="agree" value="1" /> <label for="clause">{$lang.i_have_read} <a href="{url app=article&act=system&code=eula}" target="_blank" class="agreement">{$lang.mall_eula}</a></label></td>
+                                <td><input id="clause" type="checkbox" name="agree" value="1" checked/> <label for="clause">{$lang.i_have_read} <a href="{url app=article&act=system&code=eula}" target="_blank" class="agreement">{$lang.mall_eula}</a></label></td>
                                 <td></td>
                             </tr>
                             <tr>
