mode admin bankname

--- a/themes/mall/default/_my_money.paylist.html
+++ b/themes/mall/default/_my_money.paylist.html
@@ -179,7 +179,7 @@ class="G" href="index.php?app=my_money&amp;act=txlist"><span style="color:green;
         <tr>
             <td>选择银行：</td>
             <td align="left">
-                <label><input type="radio" name="bank_name" value="" checked>招商银行：开户行:招商银行郑州分行二十一世纪支行&nbsp;
+                <label><input type="radio" name="bank_name" value="招商银行" checked>招商银行：开户行:招商银行郑州分行二十一世纪支行&nbsp;
                     姓名:姜浩 &nbsp;&nbsp;账号:6214 8337 1437 6137</label><br>
                 <label><input type="radio" name="bank_name" value="建设银行">建设银行：开户行:建设银行郑州居易国际广场支行&nbsp;
                     姓名:姜浩 &nbsp;&nbsp;账号:6236 6824 3000 2979 241</label><br>
