--- a/themes/mall/default/member.header.html
+++ b/themes/mall/default/member.header.html
@@ -103,7 +103,7 @@ window.attachEvent("onload", correctPNG);
 </head>
 <body>
 <div id="header">
- <h1 title="{$thiscity.city_title}"><a href="index.php"><img alt="{$thiscity.city_title}" src="{$thiscity.city_logo}" height="70px" /></a></h1>
+ <h1 title="{$thiscity.city_title}"><a href="index.php"><img alt="{$thiscity.city_title}" src="{$thiscity.city_logo}" height="60" /></a></h1>
    <!-- <h1 title="{$site_title}">
 	<a href="index.php"><img src="{$site_logo}" alt="{$site_title}" height="70px" /></a></h1>-->
     <div id="subnav">
