--- a/themes/mall/default/message.box.html
+++ b/themes/mall/default/message.box.html
@@ -1,6 +1,6 @@
 {include file=member.header.html}
 <style type="text/css">
-.user_name { position: relative; bottom: 18px; margin-left:5px; }
+.user_name { margin-left:5px; }
 
 </style>
 <div class="content">
