--- a/themes/mall/default/shensu_xiangqing.html
+++ b/themes/mall/default/shensu_xiangqing.html
@@ -46,7 +46,7 @@
 				</tr>
 				<!--{foreach from=$or item=val}-->
 				<tr>
-				<td><img src="/{$val.goods_image}" width="100"/></td><td align="center">{$val.goods_name}<br />  {$val.specification}</td><td align="left">{$val.quantity}</td><td align="left">{$val.jifen}</td>
+				<td><img src="{$val.goods_image}" width="100"/></td><td align="center">{$val.goods_name}<br />  {$val.specification}</td><td align="left">{$val.quantity}</td><td align="left">{$val.jifen}</td>
 				 </tr> 
 				 <!--{/foreach}-->
 				 </table>
@@ -65,9 +65,9 @@
                   …ÍÀﬂ÷§æ›:</th> 
                 <td class="paddingT15 wordSpacing5">
 				
-                   <!--{if $com.imag_1}--><a href="/{$com.imag_1}" target="_blank"><img src="/{$com.imag_1}" width="100"/> </a><!--{/if}--><br />
-				   <!--{if $com.imag_2}--><a href="/{$com.imag_2}" target="_blank"><img src="/{$com.imag_2}" width="100"/><!--{/if}--><br />
-				   <!--{if $com.imag_3}--><a href="/{$com.imag_3}" target="_blank"><img src="/{$com.imag_3}" width="100"/><!--{/if}-->
+                   <!--{if $com.imag_1}--><a href="{$com.imag_1}" target="_blank"><img src="{$com.imag_1}" width="100"/> </a><!--{/if}--><br />
+				   <!--{if $com.imag_2}--><a href="{$com.imag_2}" target="_blank"><img src="{$com.imag_2}" width="100"/><!--{/if}--><br />
+				   <!--{if $com.imag_3}--><a href="{$com.imag_3}" target="_blank"><img src="{$com.imag_3}" width="100"/><!--{/if}-->
                 </td>
             </tr>
 			<tr>
