--- a/themes/mall/default/member.index.html
+++ b/themes/mall/default/member.index.html
@@ -197,23 +197,21 @@
                         <div class="ad_bigbox">
                             <div class="ad_pay">
                                 <div class="ad_paytop">
-                                    <div class="ad_payleft"><a target="_blank" title="点击进入我的借贷平台"
-                                                               href="index.php?app=user&act=login_myother&t=p"><img
-                                            src="themes/mall/default/styles/default/images/dai.jpg"/></a></div>
+                                    <div class="ad_payleft"><a target="_blank"
+                                                               href="index.php?app=user&act=login_myother&t=p"></a></div>
                                     <div class="ad_payright">
-                                        <font style="font-size:14px; color:#ff731e; font-weight:bold">借贷平台资金</font>
+                                        <font style="font-size:14px; color:#ff731e; font-weight:bold">金服系统资金</font>
                                         <br/>
                                         账户总额：<span id='jiedaizong' style="font-weight:bold; color:#FF3300"></span> 元
                                         <br/>
                                         <a href="index.php?app=user&act=login_myother&t=p" target="_blank"
-                                           style="color:#FF731E; font-size:14px; font-weight:bold" title="点击进入我的借贷平台">我的借贷平台</a>
+                                           style="color:#FF731E; font-size:14px; font-weight:bold" title="点击进入">我的金服系统</a>
                                         <br/>
                                         可用余额：<span id='jiedaike' style="font-weight:bold; color:#FF3300"></span> 元
                                     </div>
                                 </div>
-                                <div class="ad_wdpic" style="margin-top:12px;"><a title="向借贷平台转账"
-                                                                                  href="index.php?app=member&act=zhuanzhang&t=1"
-                                                                                  style=" text-decoration:none;   color:#f30 ; font-size:14px; font-weight:bold">向借贷平台转账</a>
+                                <div class="ad_wdpic" style="margin-top:12px;"><a href="index.php?app=member&act=zhuanzhang&t=1"
+                                                                                  style=" text-decoration:none;   color:#f30 ; font-size:14px; font-weight:bold">向金服系统转账</a>
                                 </div>
                             </div>
                             <div class="ad_gx">
@@ -221,8 +219,7 @@
                                 <div class="ad_paytop">
                                     <div class="ad_payleft"><a title="点击进入我的积分平台"
                                                                href="index.php?app=user&act=login_myother&t=m"
-                                                               target="_blank"><img
-                                            src="themes/mall/default/styles/default/images/jf.jpg"/></a></div>
+                                                               target="_blank"></a></div>
                                     <div class="ad_payright" style="line-height:18px;">
                                         <font style="font-size:14px; color:#3EB1FF; font-weight:bold">积分平台资金</font>
                                         <br/>
